--- a/app/styles/common/variables.colors.sass
+++ b/app/styles/common/variables.colors.sass
@@ -1,22 +1,22 @@
 \:root
-    --color-black:                   #000000
-    --color-black-light:             #181b1a
-    --color-midnight-moss:           #1B1F1D
-    --color-midnight-moss-light:     #222925
-    --color-outer-space:             #2E3C35
-    --color-viridian-green:          #4F6158
-    --color-feldgrau:                #526059
-    --color-mineral-green:           #57665E
-    --color-corduroy:                #5D6B66
-    --color-submarine:               #909F9B
-    --color-white:                   #ffffff
-    --color-mercury:                 #E4E4E4
-    --color-mona-lisa:               #FF9A90
-    --color-mona-lisa-opacity015:     rgb(255,154,144, 0.15)
-    --color-feldgrau-opacity01:      rgba(82, 96, 89, 0.1)
-    --color-black-opacity01:         rgba(0, 0, 0, 0.1)
-    --color-black-opacity02:         rgba(0, 0, 0, 0.2)
-    --color-white-opacity07:         rgba(255, 255, 255, .7)
-    --grad-midnight-moss:            linear-gradient(-180deg, #1B1F1D 0%, #1B1F1D 26%, rgba(27,31,29,0.00) 98%)
-    --grad-just-right-to-sandrift:   linear-gradient(-225deg, #D8B6AA 0%, #B29084 100%)
-    --grad-white-smoke-to-gainsboro: linear-gradient(-180deg, #EEEEEE 0%, #D8D8D8 100%)
+    --color-main-accent: #20B1F9
+    --color-summer-sky: #39B9F9
+    --color-deep-sky-blue: #07A9F9
+    --color-main-dark: #095198
+    --color-sec-dark: #3A74AD
+    --color-sec-accent: #E72E9D
+    --color-main-light: #FFFFFF
+    --color-sec-light: #D2EFFD
+    --color-alice-blue: #EBF7FD
+    --color-main-dark-opacity80: rgba(9, 81, 152, .8)
+    --color-sec-accent-opacity80: rgba(231, 46, 157, .8)
+    --color-sec-dark-opacity50: rgba(58, 116, 173, .5)
+    --color-main-dark-opacity50: rgba(9, 81, 152, .5)
+    --color-main-accent-opacity50: rgba(32, 177, 249, .5)
+    --color-main-light-opacity50: rgba(255, 255, 255, 0.5)
+    --color-deep-sky-blue-opacity20: rgba(7, 169, 249, 0.2)
+    --color-main-dark-opacity20: rgba(9, 81, 152, 0.2)
+    --color-main-light-opacity20: rgba(255, 255, 255, 0.2)
+    --color-summer-sky-opacity10: rgba(57, 185, 249, 0.1)
+    --color-main-light-opacity10: rgba(255, 255, 255, 0.1)
+    --main-background: linear-gradient(89.9deg, rgba(169, 224, 252, 0) 20.96%, #A9E0FC 99.81%)
