--- a/app/styles/common/header.sass
+++ b/app/styles/common/header.sass
@@ -1,5 +1,33 @@
 .header-container
     display: flex
-
-    .nav-item a
-        display: block
+    width: gem(1260)
+    height: gem(40)
+    margin: gem(40) gem(90) 0 gem(90)
+    .header-logo
+        width: gem(117.2)
+        height: gem(40)
+        img
+            display: block
+    .header-nav
+        width: gem(463)
+        margin: gem(11) gem(166) gem(11) gem(261.8)
+        .nav-list
+            display: flex
+            flex-direction: row
+            gap: gem(30)
+            .nav-item a
+                display: block
+    .header-sub-menu
+        display: flex
+        gap: gem(30)
+        .sub-menu-item
+            display: flex
+            gap: gem(7)
+            .icon
+                width: gem(14)
+                height: gem(14)
+                margin-top: gem(13)
+                img
+                    display: block
+            .text
+                margin-top: gem(11)
