--- a/app/html/common/header.ejs
+++ b/app/html/common/header.ejs
@@ -5,43 +5,45 @@
         <% if (typeof removeheader==='undefined' || !removeheader) { %>
 
             <div class="header-container">
-                <div class="header-logo">
-                    <img src="/assets/img/final-horizontal-black-tor.png" alt="final-horizontal-black-tor">
-                </div>
-                <nav class="header-nav">
-                    <ul class="nav-list">
-                        <li class="nav-item">
-                            <a class="desc-1" href="#">Why Enigma</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="desc-1" href="#">Community</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="desc-1" href="#">Developers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="desc-1" href="#">Ecosystem</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="desc-1" href="#">Team</a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="header-sub-menu">
-                    <div class="sub-menu-item">
-                        <div class="icon">
-                            <img src="/assets/img/Frame.png" alt="Frame">
-                        </div>
-                        <div class="text">
-                            <p class="desc-1">English</p>
-                        </div>
+                <div class="header-content">
+                    <div class="header-logo">
+                        <img src="/assets/img/final-horizontal-black-tor.png" alt="final-horizontal-black-tor">
                     </div>
-                    <div class="sub-menu-item">
-                        <div class="icon">
-                            <img src="/assets/img/Frame 2.png" alt="Frame2">
+                    <nav class="header-nav">
+                        <ul class="nav-list">
+                            <li class="nav-item">
+                                <a class="desc-1" href="#">Why Enigma</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="desc-1" href="#">Community</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="desc-1" href="#">Developers</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="desc-1" href="#">Ecosystem</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="desc-1" href="#">Team</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="header-sub-menu">
+                        <div class="sub-menu-item">
+                            <div class="icon">
+                                <img src="/assets/img/Frame.png" alt="Frame">
+                            </div>
+                            <div class="text">
+                                <p class="desc-1">English</p>
+                            </div>
                         </div>
-                        <div class="text">
-                            <p class="desc-1">Join the Community</p>
+                        <div class="sub-menu-item">
+                            <div class="icon">
+                                <img src="/assets/img/Frame 2.png" alt="Frame2">
+                            </div>
+                            <div class="text">
+                                <p class="desc-1">Join the Community</p>
+                            </div>
                         </div>
                     </div>
                 </div>
