--- a/app/styles/common/header.sass
+++ b/app/styles/common/header.sass
@@ -1,33 +1,38 @@
 .header-container
     display: flex
-    width: gem(1260)
-    height: gem(40)
-    margin: gem(40) gem(90) 0 gem(90)
-    .header-logo
-        width: gem(117.2)
+    width: gem(1440)
+    height: gem(80)
+    padding: gem(20) gem(90) gem(20) gem(90)
+    .header-content
+        width: gem(1260)
         height: gem(40)
-        img
-            display: block
-    .header-nav
-        width: gem(463)
-        margin: gem(11) gem(166) gem(11) gem(261.8)
-        .nav-list
-            display: flex
-            flex-direction: row
-            gap: gem(30)
-            .nav-item a
+        .header-logo
+            width: gem(117.2)
+            height: gem(40)
+            img
                 display: block
-    .header-sub-menu
-        display: flex
-        gap: gem(30)
-        .sub-menu-item
-            display: flex
-            gap: gem(7)
-            .icon
-                width: gem(14)
-                height: gem(14)
-                margin-top: gem(13)
-                img
+        .header-nav
+            width: gem(463)
+            height: gem(18)
+            margin: gem(11) gem(166) gem(11) gem(261.8)
+            .nav-list
+                display: flex
+                flex-direction: row
+                gap: gem(30)
+                .nav-item a
                     display: block
-            .text
-                margin-top: gem(11)
+        .header-sub-menu
+            display: flex
+            gap: gem(30)
+            .sub-menu-item
+                display: flex
+                gap: gem(7)
+                .icon
+                    width: gem(14)
+                    height: gem(14)
+                    margin-top: gem(13)
+                    img
+                        display: block
+                .text
+                    width: gem(133)
+                    margin-top: gem(11)
