--- a/app/html/common/header.ejs
+++ b/app/html/common/header.ejs
@@ -36,6 +36,46 @@
                             <div class="text">
                                 <p class="desc-1">English</p>
                             </div>
+                            <div class="drop-down-menu">
+                                <ul class="drop-down-list">
+                                    <li class="drop-down-item active">
+                                        <div class="item-icon">
+                                            <svg width="10" height="7" viewBox="0 0 10 7" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path opacity="0.8" d="M1 3L4 6L9 1" stroke="#E72E9D" />
+                                            </svg>
+                                        </div>
+                                        <p class="desc-1-leng">English</p>
+                                    </li>
+                                    <li class="drop-down-item">
+                                        <div class="item-icon">
+                                            <svg width="10" height="7" viewBox="0 0 10 7" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path opacity="0.8" d="M1 3L4 6L9 1" stroke="#E72E9D" />
+                                            </svg>
+                                        </div>
+                                        <p class="desc-1-leng">中文</p>
+                                    </li>
+                                    <li class="drop-down-item">
+                                        <div class="item-icon">
+                                            <svg width="10" height="7" viewBox="0 0 10 7" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path opacity="0.8" d="M1 3L4 6L9 1" stroke="#E72E9D" />
+                                            </svg>
+                                        </div>
+                                        <p class="desc-1-leng">日本語</p>
+                                    </li>
+                                    <li class="drop-down-item">
+                                        <div class="item-icon">
+                                            <svg width="10" height="7" viewBox="0 0 10 7" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path opacity="0.8" d="M1 3L4 6L9 1" stroke="#E72E9D" />
+                                            </svg>
+                                        </div>
+                                        <p class="desc-1-leng">한국어</p>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="sub-menu-item">
                             <div class="icon">
