--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -2,7 +2,13 @@
 @require('./common/header.ejs')
 
 <main id="main" data-page-id="home">
+    <section class="hero">
+        <div class="container">
+            <div class="content-wrap">
 
+            </div>
+        </div>
+    </section>
 </main>
 
 @require('./common/footer.ejs')
