--- a/app/styles/common/variables.typography.sass
+++ b/app/styles/common/variables.typography.sass
@@ -23,6 +23,7 @@
     --line-height-h3: #{gem(35)}
     --line-height-h4: #{gem(24)}
     --line-height-desc1: #{gem(24)}
+    --line-height-desc1-leng: #{gem(18)}
 
     --letter-spacing: normal
     --letter-spacing-0: 0
