--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -5,7 +5,18 @@
     <section class="hero">
         <div class="container">
             <div class="content-wrap">
-
+                <div class="title-wrap">
+                    <h1 class="title-h1">We're securing
+                        the decentralized web
+                    </h1>
+                </div>
+                <div class="text">
+                    <p class="desc-1">
+                        Enigma is a secure computation protocol, where “secret nodes” in our network perform
+                        computations over encrypted data. Enigma brings privacy to any kind of computation - not just
+                        transactions - helping to improve the adoption and usability of decentralized technologies.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
