--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -1,1 +1,9 @@
 @import 'base.sass'
+.container
+    padding: gem(220) gem(810) 0 gem(180)
+    .content-wrap
+        width: gem(450)
+        .title-wrap
+        .text
+            margin-top: gem(20)
+            margin-bottom: gem(33)
