--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -18,6 +18,24 @@
                     </p>
                 </div>
             </div>
+            <div class="aside-wrap">
+                <div class="aside-left">
+                    <div class="icon">
+                        <img src="/assets/img/Frame 1.png" alt="Frame 1">
+                    </div>
+                    <div class="text">
+                        <p class="desc-1">Learn the Basics</p>
+                    </div>
+                </div>
+                <div class="aside-right">
+                    <div class="icon">
+                        <img src="/assets/img/Group 2.13.png" alt="Group 2.13">
+                    </div>
+                    <div class="text">
+                        <p class="desc-1">Build with Enigma</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </main>
