--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -7,3 +7,22 @@
         .text
             margin-top: gem(20)
             margin-bottom: gem(33)
+    .aside-wrap
+        display: flex
+        .aside-left
+            display: flex
+            background-color: #20B1F9
+            width: gem(193)
+            height: gem(50)
+            padding: gem(16) gem(30)
+            justify-content: space-between
+            margin-right: gem(10)
+        .aside-right
+            display: flex
+            border: gem(1) solid #20B1F9
+            width: gem(202)
+            height: gem(50)
+            padding: gem(16) gem(30)
+            justify-content: space-between
+        .icon img
+            display: block
