--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -6,7 +6,7 @@
         <div class="container">
             <div class="content-wrap">
                 <div class="title-wrap">
-                    <h1 class="title-h1">We're securing
+                    <h1 class="title-h1">We're securing <br>
                         the decentralized web
                     </h1>
                 </div>
@@ -20,22 +20,39 @@
             </div>
             <div class="aside-wrap">
                 <div class="aside-left">
-                    <div class="icon">
-                        <img src="/assets/img/Frame 1.png" alt="Frame 1">
-                    </div>
-                    <div class="text">
-                        <p class="desc-1">Learn the Basics</p>
-                    </div>
+                    <a class="btn btn-fill" href="#">
+                        <div class="icon">
+                            <img src="/assets/img/Frame 1.png" alt="Frame 1">
+                        </div>
+                        <div class="text">
+                            <p class="desc-1">Learn the Basics</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="aside-right">
-                    <div class="icon">
-                        <img src="/assets/img/Group 2.13.png" alt="Group 2.13">
-                    </div>
-                    <div class="text">
-                        <p class="desc-1">Build with Enigma</p>
-                    </div>
+                    <a class="btn btn-border" href="#">
+                        <div class="icon">
+                            <img src="/assets/img/Group 2.13.png" alt="Group 2.13">
+                        </div>
+                        <div class="text">
+                            <p class="desc-1">Build with Enigma</p>
+                        </div>
+                    </a>
                 </div>
             </div>
+        </div>
+        <div class="cub">
+            <img src="/assets/img/Group 2.11.png" alt="Group 2.11">
+        </div>
+        <div class="play-btn-wrap">
+            <button class="play-btn">
+                <div class="circle"></div>
+                <svg class="triangle" width="6" height="10" viewBox="0 0 6 10" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6 5L0 0V10L6 5Z" fill="#20B1F9" />
+                </svg>
+                <p class="desc-1">What is Enigma?<span>2:00</span></p>
+            </button>
         </div>
     </section>
 </main>
