--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -13,6 +13,7 @@ main
     overflow-x: hidden
 
 body
+    background: linear-gradient(90.12deg, rgba(169, 224, 252, 0) 5.01%, #A9E0FC 99.85%)
     display: flex
     flex-direction: column
     font-family: var(--main-font)
@@ -85,6 +86,23 @@ section
     transition: opacity 0.4s ease
     &Loaded
         opacity: 1
+
+.btn
+    display: flex
+    padding: gem(14) gem(30)
+    align-items: center
+    &-border
+        border: gem(1) solid #20B1F9
+    &-fill
+        background-color: #20B1F9
+    .icon
+        width: gem(14)
+        height: gem(14)
+        margin-right: gem(10)
+        img
+            display: block
+            width: 100%
+            height: 100%
 
 input
     &::-webkit-input-placeholder,
