--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -55,6 +55,18 @@
             </button>
         </div>
     </section>
+    <section class="group">
+        <div class="container">
+            <div class="content-wrap-left">
+                <div class="list-item">
+                    <ul class="list">
+                        <li class="item"></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="content-wrap-right"></div>
+        </div>
+    </section>
 </main>
 
 @require('./common/footer.ejs')
