--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -56,11 +56,19 @@
         </div>
     </section>
     <section class="group">
-        <div class="container">
+        <div class="container-group">
             <div class="content-wrap-left">
                 <div class="list-item">
                     <ul class="list">
-                        <li class="item"></li>
+                        <li class="item">
+                            <div class="icon">
+                                <img src="/assets/img/data-privacy.png" alt="privacy">
+                            </div>
+                            <h2 class="title-h2">Data Privacy</h2>
+                            <p class="desc-1">Blockchains are bad at privacy by design. This greatly limits the kinds of
+                                applications that can be built in every field, from finance to gaming to healthcare.
+                            </p>
+                        </li>
                     </ul>
                 </div>
             </div>
