--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -52,3 +52,22 @@
         display: flex
         .aside-left
             margin-right: gem(10)
+
+.group
+    margin-bottom: gem(148)
+.container-group
+    padding-left: gem(180)
+    .content-wrap-left
+        .list-item
+            .list
+            .item
+                .icon
+                    width: gem(40)
+                    height: gem(40)
+                    margin-bottom: gem(20)
+                    img
+                        display: block
+            h2
+                margin-bottom: gem(10)
+            p
+                width: gem(240)
