--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -69,6 +69,33 @@
                                 applications that can be built in every field, from finance to gaming to healthcare.
                             </p>
                         </li>
+                        <li class="item">
+                            <div class="icon">
+                                <img src="/assets/img/usability.png" alt="usability">
+                            </div>
+                            <h2 class="title-h2">Usability</h2>
+                            <p class="desc-1">Decentralized applications are difficult to use, and without privacy, many
+                                new problems are created for users trying to interact with these applications.
+                            </p>
+                        </li>
+                        <li class="item">
+                            <div class="icon">
+                                <img src="/assets/img/scalability.png" alt="scalability">
+                            </div>
+                            <h2 class="title-h2">Scalability</h2>
+                            <p class="desc-1">Intensive and repetitive computations on blockchains are far too slow and
+                                expensive to be viable.
+                            </p>
+                        </li>
+                        <li class="item">
+                            <div class="icon">
+                                <img src="/assets/img/data-ownership.png" alt="ownership">
+                            </div>
+                            <h2 class="title-h2">Data Ownership</h2>
+                            <p class="desc-1">Current solutions for sharing data off-chain still lead to silos of data
+                                that belong to corporations, not people.
+                            </p>
+                        </li>
                     </ul>
                 </div>
             </div>
