--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -60,6 +60,10 @@
     .content-wrap-left
         .list-item
             .list
+                display: flex
+                flex-wrap: wrap
+                width: gem(600)
+                gap: gem(50)
             .item
                 .icon
                     width: gem(40)
