--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -56,9 +56,9 @@
         </div>
     </section>
     <section class="group">
-        <div class="container-group">
+        <div class="container">
             <div class="content-wrap-left">
-                <div class="list-item">
+                <div class="list-items-wrap">
                     <ul class="list">
                         <li class="item">
                             <div class="icon">
