--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -48,7 +48,7 @@ section
     background-position: center
     background-size: cover
     visibility: hidden
-    overflow: hidden
+    overflow: innitial
 
 .fluid-container
     width: 100%
