--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -58,46 +58,60 @@
     <section class="group">
         <div class="container">
             <div class="content-wrap-left">
-                <div class="list-items-wrap">
-                    <ul class="list">
-                        <li class="item">
-                            <div class="icon">
-                                <img src="/assets/img/data-privacy.png" alt="privacy">
-                            </div>
+                <ul class="list">
+                    <li class="item">
+                        <div class="item-icon">
+                            <img src="/assets/img/data-privacy.png" alt="privacy">
+                        </div>
+                        <div class="item-title">
                             <h2 class="title-h2">Data Privacy</h2>
+                        </div>
+                        <div class="item-description">
                             <p class="desc-1">Blockchains are bad at privacy by design. This greatly limits the kinds of
                                 applications that can be built in every field, from finance to gaming to healthcare.
                             </p>
-                        </li>
-                        <li class="item">
-                            <div class="icon">
-                                <img src="/assets/img/usability.png" alt="usability">
-                            </div>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="item-icon">
+                            <img src="/assets/img/usability.png" alt="usability">
+                        </div>
+                        <div class="item-title">
                             <h2 class="title-h2">Usability</h2>
+                        </div>
+                        <div class="item-description">
                             <p class="desc-1">Decentralized applications are difficult to use, and without privacy, many
                                 new problems are created for users trying to interact with these applications.
                             </p>
-                        </li>
-                        <li class="item">
-                            <div class="icon">
-                                <img src="/assets/img/scalability.png" alt="scalability">
-                            </div>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="item-icon">
+                            <img src="/assets/img/scalability.png" alt="scalability">
+                        </div>
+                        <div class="item-title">
                             <h2 class="title-h2">Scalability</h2>
+                        </div>
+                        <div class="item-description">
                             <p class="desc-1">Intensive and repetitive computations on blockchains are far too slow and
                                 expensive to be viable.
                             </p>
-                        </li>
-                        <li class="item">
-                            <div class="icon">
-                                <img src="/assets/img/data-ownership.png" alt="ownership">
-                            </div>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="item-icon">
+                            <img src="/assets/img/data-ownership.png" alt="ownership">
+                        </div>
+                        <div class="item-title">
                             <h2 class="title-h2">Data Ownership</h2>
+                        </div>
+                        <div class="item-description">
                             <p class="desc-1">Current solutions for sharing data off-chain still lead to silos of data
                                 that belong to corporations, not people.
                             </p>
-                        </li>
-                    </ul>
-                </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
             <div class="content-wrap-right"></div>
         </div>
