--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -58,20 +58,18 @@
     .container
         padding-left: gem(180)
     .content-wrap-left
-        .list-items-wrap
-            .list
-                display: flex
-                flex-wrap: wrap
-                width: gem(510)
-                gap: gem(50) gem(30)
-            .item
-                width: gem(240)
-                .icon
-                    width: gem(40)
-                    height: gem(40)
-                    margin-bottom: gem(20)
-                    img
-                        display: block
-            h2
+        .list
+            display: flex
+            flex-wrap: wrap
+            width: gem(510)
+            gap: gem(50) gem(30)
+        .item
+            width: gem(240)
+            &-icon
+                width: gem(40)
+                height: gem(40)
+                margin-bottom: gem(20)
+                img
+                    display: block
+            &-title
                 margin-bottom: gem(10)
-
