--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -57,7 +57,7 @@
     </section>
     <section class="group">
         <div class="container">
-            <div class="content-wrap-left">
+            <div class="content-wrap-list">
                 <ul class="list">
                     <li class="item">
                         <div class="item-icon">
@@ -113,9 +113,142 @@
                     </li>
                 </ul>
             </div>
-            <div class="content-wrap-right"></div>
+            <div class="content-wrap-call">
+                <div class="content-wrap">
+                    <div class="title">
+                        <h2 class="title-h1">The web needs our help</h2>
+                    </div>
+                    <div class="description">
+                        <p class="desc-1">Our internet today is broken and over-centralized. A more decentralized
+                            internet, based on decentralized protocols, can create enormous value, opportunity, and
+                            freedom for millions of people. But to realize this dream, we must first solve many
+                            challenges.
+                        </p>
+                    </div>
+                    <div class="button-wrap">
+                        <a class="btn btn-fill" href="#">
+                            <div class="icon">
+                                <img src="/assets/img/Frame2.svg" alt="Frame2">
+                            </div>
+                            <div class="text">
+                                <p class="desc-1">Why Enigma?</p>
+                            </div>
+                        </a>
+                        <a class="btn btn-border" href="#">
+                            <div class="icon">
+                                <img src="/assets/img/copy.svg" alt="copy">
+                            </div>
+                            <div class="text">
+                                <p class="desc-1">Read Our Blog</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <div class="section-wrap">
+        <div class="background">
+            <img src="/assets/img/bg_section.svg" alt="bg_section">
+        </div>
+        <section class="solution">
+            <div class="container">
+                <div class="content-wrap-list">
+                    <ul class="list">
+                        <li class="item">
+                            <div class="item-icon">
+                                <img src="/assets/img/data-privacy.png" alt="privacy">
+                            </div>
+                            <div class="item-title">
+                                <h2 class="title-h2">Data Privacy</h2>
+                            </div>
+                            <div class="item-description">
+                                <p class="desc-1">Blockchains are bad at privacy by design. This greatly limits the
+                                    kinds of
+                                    applications that can be built in every field, from finance to gaming to healthcare.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="item">
+                            <div class="item-icon">
+                                <img src="/assets/img/usability.png" alt="usability">
+                            </div>
+                            <div class="item-title">
+                                <h2 class="title-h2">Usability</h2>
+                            </div>
+                            <div class="item-description">
+                                <p class="desc-1">Decentralized applications are difficult to use, and without privacy,
+                                    many
+                                    new problems are created for users trying to interact with these applications.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="item">
+                            <div class="item-icon">
+                                <img src="/assets/img/scalability.png" alt="scalability">
+                            </div>
+                            <div class="item-title">
+                                <h2 class="title-h2">Scalability</h2>
+                            </div>
+                            <div class="item-description">
+                                <p class="desc-1">Intensive and repetitive computations on blockchains are far too slow
+                                    and
+                                    expensive to be viable.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="item">
+                            <div class="item-icon">
+                                <img src="/assets/img/data-ownership.png" alt="ownership">
+                            </div>
+                            <div class="item-title">
+                                <h2 class="title-h2">Data Ownership</h2>
+                            </div>
+                            <div class="item-description">
+                                <p class="desc-1">Current solutions for sharing data off-chain still lead to silos of
+                                    data
+                                    that belong to corporations, not people.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="content-wrap-call">
+                    <div class="content-wrap">
+                        <div class="title">
+                            <h2 class="title-h1">The web needs our help</h2>
+                        </div>
+                        <div class="description">
+                            <p class="desc-1">Our internet today is broken and over-centralized. A more decentralized
+                                internet, based on decentralized protocols, can create enormous value, opportunity, and
+                                freedom for millions of people. But to realize this dream, we must first solve many
+                                challenges.
+                            </p>
+                        </div>
+                        <div class="button-wrap">
+                            <a class="btn btn-fill" href="#">
+                                <div class="icon">
+                                    <img src="/assets/img/Frame2.svg" alt="Frame2">
+                                </div>
+                                <div class="text">
+                                    <p class="desc-1">Why Enigma?</p>
+                                </div>
+                            </a>
+                            <a class="btn btn-border" href="#">
+                                <div class="icon">
+                                    <img src="/assets/img/copy.svg" alt="copy">
+                                </div>
+                                <div class="text">
+                                    <p class="desc-1">Read Our Blog</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="community"></section>
+    </div>
 </main>
 
 @require('./common/footer.ejs')
