--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -97,5 +97,34 @@
         padding: gem(159) gem(210) gem(70) gem(180)
         .content-wrap-list
             order: 2
+            .list
+            .item
+                &-icon
+                    width: gem(43)
+            .item-title
+                .title-h2
+                    color: #FFFFFF
+            .item-description
+                .desc-1
+                    color: #D2EFFD
         .content-wrap-call
             order: 1
+            .content-wrap
+                .title
+                    &-h1
+                        color: #FFFFFF
+            .description
+                .desc-1
+                    color: #D2EFFD
+            .button-wrap
+                .btn
+                    &-fill
+                        background-color: #FFFFFF
+                        .text
+                            .desc-1
+                                color: #20B1F9
+                    &-border
+                        border: gem(1) solid #FFFFFF
+                        .text
+                            .desc-1
+                                color: #FFFFFF
