--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -157,57 +157,53 @@
                     <ul class="list">
                         <li class="item">
                             <div class="item-icon">
-                                <img src="/assets/img/data-privacy.png" alt="privacy">
+                                <img src="/assets/img/step-1.svg" alt="step-1">
                             </div>
                             <div class="item-title">
-                                <h2 class="title-h2">Data Privacy</h2>
+                                <h2 class="title-h2">Step 1</h2>
                             </div>
                             <div class="item-description">
-                                <p class="desc-1">Blockchains are bad at privacy by design. This greatly limits the
-                                    kinds of
-                                    applications that can be built in every field, from finance to gaming to healthcare.
+                                <p class="desc-1">A developer writes a secret contract and deploys it to the Enigma
+                                    Network. This means more value and more opportunity.
                                 </p>
                             </div>
                         </li>
                         <li class="item">
                             <div class="item-icon">
-                                <img src="/assets/img/usability.png" alt="usability">
+                                <img src="/assets/img/step-2.svg" alt="step-2">
                             </div>
                             <div class="item-title">
-                                <h2 class="title-h2">Usability</h2>
+                                <h2 class="title-h2">Step 2</h2>
                             </div>
                             <div class="item-description">
-                                <p class="desc-1">Decentralized applications are difficult to use, and without privacy,
-                                    many
-                                    new problems are created for users trying to interact with these applications.
+                                <p class="desc-1">Users submit encrypted data to Enigma that can’t be read by anyone
+                                    else — including the node doing the computation.
                                 </p>
                             </div>
                         </li>
                         <li class="item">
                             <div class="item-icon">
-                                <img src="/assets/img/scalability.png" alt="scalability">
+                                <img src="/assets/img/step-3.svg" alt="step-3">
                             </div>
                             <div class="item-title">
-                                <h2 class="title-h2">Scalability</h2>
+                                <h2 class="title-h2">Step 3</h2>
                             </div>
                             <div class="item-description">
-                                <p class="desc-1">Intensive and repetitive computations on blockchains are far too slow
-                                    and
-                                    expensive to be viable.
+                                <p class="desc-1">An Enigma node performs the computation, and returns the result
+                                    (either directly to the user, or to any Ethereum smart contract).
                                 </p>
                             </div>
                         </li>
                         <li class="item">
                             <div class="item-icon">
-                                <img src="/assets/img/data-ownership.png" alt="ownership">
+                                <img src="/assets/img/step-4.svg" alt="step-4">
                             </div>
                             <div class="item-title">
-                                <h2 class="title-h2">Data Ownership</h2>
+                                <h2 class="title-h2">Step 4</h2>
                             </div>
                             <div class="item-description">
-                                <p class="desc-1">Current solutions for sharing data off-chain still lead to silos of
-                                    data
-                                    that belong to corporations, not people.
+                                <p class="desc-1">The work is verified as correct, and payment is released in ENG to the
+                                    Enigma node that performed the work.
                                 </p>
                             </div>
                         </li>
@@ -216,30 +212,29 @@
                 <div class="content-wrap-call">
                     <div class="content-wrap">
                         <div class="title">
-                            <h2 class="title-h1">The web needs our help</h2>
+                            <h2 class="title-h1">Enigma builds solutions</h2>
                         </div>
                         <div class="description">
-                            <p class="desc-1">Our internet today is broken and over-centralized. A more decentralized
-                                internet, based on decentralized protocols, can create enormous value, opportunity, and
-                                freedom for millions of people. But to realize this dream, we must first solve many
-                                challenges.
+                            <p class="desc-1">Enigma’s protocol helps solve all these challenges by moving computations
+                                to a decentralized off-chain network that keeps data encrypted and secure. This means
+                                more value, more opportunity, and more usability. Here’s how Enigma works.
                             </p>
                         </div>
                         <div class="button-wrap">
                             <a class="btn btn-fill" href="#">
                                 <div class="icon">
-                                    <img src="/assets/img/Frame2.svg" alt="Frame2">
+                                    <img src="/assets/img/play.svg" alt="play">
                                 </div>
                                 <div class="text">
-                                    <p class="desc-1">Why Enigma?</p>
+                                    <p class="desc-1">Try Enigma</p>
                                 </div>
                             </a>
                             <a class="btn btn-border" href="#">
                                 <div class="icon">
-                                    <img src="/assets/img/copy.svg" alt="copy">
+                                    <img src="/assets/img/doc.svg" alt="doc">
                                 </div>
                                 <div class="text">
-                                    <p class="desc-1">Read Our Blog</p>
+                                    <p class="desc-1">Documentation</p>
                                 </div>
                             </a>
                         </div>
