--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -90,8 +90,13 @@
 
 .section-wrap
     position: relative
+    overflow: hidden
     .background
+        width: gem(1440)
         position: absolute
+        img
+            width: 100%
+
 .solution
     .container
         padding: gem(159) gem(210) gem(70) gem(180)
